--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "uuid": "^9.0.1",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6"
+    "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^9.0.2",
+    "validator": "^13.11.0",
+    "dotenv": "^16.3.1"
   }
 }
