--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +18,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
     "uuid": "^9.0.1",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "jsonwebtoken": "^9.0.2",
-    "validator": "^13.11.0",
-    "dotenv": "^16.3.1"
+    "path": "^0.12.7"
   }
 }
